setup Jetpack Navigation Component

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,7 +14,8 @@ retrofit = "2.9.0"
 lifecycle = "2.5.1"
 lifecycleViewmodelAndroid = "2.9.2"
 koin = "3.3.0"
-fragmentKtx = "1.5.5"
+fragmentKtx = "1.5.6"
+navigation = "2.5.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -34,6 +35,8 @@ activity-ktx = { group = "androidx.activity", name = "activity-ktx", version.ref
 androidx-lifecycle-viewmodel-android = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-android", version.ref = "lifecycleViewmodelAndroid" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 androidx-fragment-ktx = { group = "androidx.fragment", name = "fragment-ktx", version.ref = "fragmentKtx" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
